--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="right-container" id ="right-container">
         <h1>Your Notes</h1>
-        <!-- <div class="right-lower"></div> -->
+        <div id="right-lower"></div>
     </div>
     <script src="./script.js"></script>
 </body>
